fix(css): change overflow-x hidden to clip on html and body to enable position sticky

--- a/src/styles.css
+++ b/src/styles.css
@@ -154,7 +154,7 @@
 
   html, body {
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: clip;
   }
 
   body {
